--- a/index.html
+++ b/index.html
@@ -3,273 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>IPad</title>
-	<style>
-		*{
-	margin: 0px;
-	padding: 0px;
-}
-#header{
-	height: 730px;
-	margin:0 auto;
-}
-#container{
-	height: 345px;
-	margin: 0 auto;
-	padding-left: 230px;
-	background-image: url(../images/container-bg.gif);
-}
-#footer{
-	height: 90px;
-	margin: 0 auto;
-	background-image: url(../images/footer-bg.gif);
-}
-#top{
-	height: 80px;
-	margin: 0 auto;
-}
-.logo{
-	height: 80px;
-	width: 179px;
-	margin-left: 220px;
-	background-color: #db373b;
-	float: left;
-}
-.logo p{
-	color: #fff;
-	font-size: 28px;
-	text-align: center;
-	line-height: 80px;
-	font-family: chunkfive;
-}
-@font-face{
-	font-family: chunkfive;
-	src: url(Chunkfive.otf);
-}
-#header>ul{
-	margin-left: 42px;
-}
-.bar{
-	height: 40px;
-	list-style: none;
-	float: left;
-	font-size: 18px;
-	margin-left: 42px;
-	line-height: 80px;
-}
-.bar a{
-	color: #000;
-	font-family: Helvetical,arial;
-}
-.bar a:link{
-	text-decoration:none;
-}
-.bar a:hover{
-	border-bottom: 3px solid #000;
-}
-#banner{
-	height: 583px;
-	width: 1100px;
-	margin: 0 auto;
-}
-.banner-left{
-	width: 28px;
-	height: 48px;
-	margin-top: 210px;
-	float: left;
-	cursor: pointer;
-}
-.banner-right{
-	width: 28px;
-	height: 48px;
-	float: right;
-	margin-top: 210px;
-	cursor: pointer;
-}
-.banner-center{
-	float: left;
-}
-.banner-title{
-	margin-top: 62px;
-}
-.banner-title p{
-	font-size: 48px;
-	font-family: chunkfive;
-	margin-left: 54px;
-}
-.banner-p{
-	font-size: 18px;
-	font-family: DroidSerif;
-	margin-left: 54px;
-	margin-top: 34px;
-	line-height: 30px;
-}
-.banner-img{
-	margin-left: 53px;
-	margin-top: 80px;
-}
-.banner-box{
-	height: 485px;
-	width: 358px;
-	float: left;
-	margin-top: 27px;
-}
-.banner-bottom{
-	margin-bottom: 0px;
-	height: 15px;
-	width: 115px;
-	margin-left: 461px;
-}
-.clear{
-	clear: both;
-}
-.banner-list{
-	height: 8px;
-	width: 8px;
-	list-style: none;
-	border:2px solid #eee;
-	border-radius: 16px;
-	float: left;
-	margin-top: 53px;
-	margin-left: 11px;
-}
-#container{
-	padding-top: 45px;
-}
-#container-inner{
-	width: 570px;
-	float: left;
-}
-.our-company{
-	color: #fff;
-	font-family: chunkfive;
-	font-size:24px;
-}
-@font-face{
-	font-family: DroidSerif;
-	src: url(DroidSerif-Italic.ttf);
-}
-.container-p{
-	font-size: 16px;
-	color: #dadada;
-	list-style: none;
-	font-family: DroidSerif;
-	line-height: 20px;
-	margin-top: 20px;
-}
-#container-inner ul{
-	padding-top: 10px;
-}
-#container-right{
-	width: 400px;
-	float: left;
-}
-.blog{
-	color: #fff;
-	font-family: chunkfive;
-	font-size:24px;
-}
-.aug{
-	width: 50px;
-	height: 40px;
-	border-radius: 30px;
-	background-color: #333;
-	font-family: DroidSerif;
-	list-style: none;
-	color: #dadada;
-	text-align: center;
-	padding-top: 10px;
-	font-size: 14px;
-	margin-top: 10px;
-}
-.list-1{
-	padding-top: 10px;
-	width: 50px;
-	float: left;
-}
-.list-2{
-	float: left;
-
-}
-.app{
-	font-size: 14px;
-	font-family: DroidSerif;
-	color: #666;
-	list-style: none;
-	margin-top: 30px;
-	margin-left: 10px;
-}
-.app span{
-	color: #fff;
-}
-.footer-left{
-	width: 300px;
-	float: left;
-}
-.left{
-	font-size: 14px;
-	font-family: arial;
-	line-height: 90px;
-	color: #fff;
-	width: 300px;
-	margin-left: 230px;
-	list-style: none;
-	float: left;
-}
-.footer-list{
-	float: left;
-	list-style: none;
-	line-height: 90px;
-	margin-left: 16px;
-}
-.footer-right{
-	margin-left: 330px;
-	float: left;
-}
-.footer-list a{
-	font-size: 14px;
-	font-family: arial;
-	color: #fff;
-}
-.footer-list a:link{
-	text-decoration:none;
-}
-.home-list,.app-list,.products-list,.contact-list{
-	list-style: none;
-	color: #000;
-	font-family: arial;
-	line-height: 50px;
-	background-color: #eee;
-	padding-left: 3px;
-	padding-top: -3px;
-	border-radius: 3px;
-	margin-top:1px; 
-}
-.bar-1{
-	display: none;
-	position: absolute;
-	left: 443px;
-	top: 60px;
-}
-.bar-2{
-	display: none;
-	position: absolute;
-	left: 530px;
-	top: 60px;
-}
-.bar-3{
-	display: none;
-	position: absolute;
-	left: 695px;
-	top: 60px;
-}
-.bar-4{
-	display: none;
-	position: absolute;
-	left: 810px;
-	top: 60px;	
-}
-
-	</style>
+	<link rel="stylesheet" href="style/index.css">
 </head>
 <body>
 	<div id="header">
