--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<ul>
 		<li><a href="Homework-1/index.html">这是作业1</a></li>
 		<li><a href="Homework-2/index.html">这是作业2</a></li>
+		<li><a href="Homework-3/index.html">这是作业3</a></li>
 	</ul>
 </body>
 </html>
