--- a/index.html
+++ b/index.html
@@ -2,14 +2,50 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>作业</title>
+	<title>ToddWang Homepage【汪涛】</title>
+	<link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-	<h1>这里显示的是作业</h1>
-	<ul>
-		<li><a href="Homework-1/index.html">这是作业1</a></li>
-		<li><a href="Homework-2/index.html">这是作业2</a></li>
-		<li><a href="Homework-3/index.html">这是作业3</a></li>
-	</ul>
+	<div id="page">
+		<div id="header">
+			<div class="logo">
+				<img src="images/touxiang.jpg" alt="头像">
+				<h2>Todd.Wang</h2>
+			</div>
+			<div class="bar">
+				<ul id="bar-list">
+					<li class="bar1">HomePage</li>
+					<li class="bar2">Work</li>
+					<li class="bar3">About Me</li>
+					<li class="bar4">Careers</li>
+					<li class="bar5">Contact Me</li>
+				</ul>
+			</div>
+		</div>
+		<div id="container">
+			<div class="work">
+				<ul id="homeworklist-20160315">20160315-homework
+					<li class="homework">
+						<a href="homework-1/index.html">Homework-1</a>
+					</li>
+					<li class="homework">
+						<a href="homework-2/index.html">Homework-2</a>
+					</li>
+					<li class="homework">
+						<a href="homework-3/index.html">Homework-3</a>
+					</li>
+					<li class="homework">
+						<a href="homework-4/index.html">Homework-4</a>
+					</li>
+					<li class="homework">
+						<a href="homework-5/index.html">Homework-5</a>
+					</li>
+				</ul>
+				<ul id="homeworklist-20160315">20160315-homework-js
+					<li class="homework"><a href="homework-js-1/index.html">homework-js</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
