--- a/index.html
+++ b/index.html
@@ -26,23 +26,23 @@
 			<div class="work">
 				<ul id="homeworklist-20160315">20160315-homework
 					<li class="homework">
-						<a href="homework-1/index.html">Homework-1</a>
+						<a href="Homework-1/index.html">Homework-1</a>
 					</li>
 					<li class="homework">
-						<a href="homework-2/index.html">Homework-2</a>
+						<a href="Homework-2/index.html">Homework-2</a>
 					</li>
 					<li class="homework">
-						<a href="homework-3/index.html">Homework-3</a>
+						<a href="Homework-3/index.html">Homework-3</a>
 					</li>
 					<li class="homework">
-						<a href="homework-4/index.html">Homework-4</a>
+						<a href="Homework-4/index.html">Homework-4</a>
 					</li>
 					<li class="homework">
-						<a href="homework-5/index.html">Homework-5</a>
+						<a href="Homework-5/index.html">Homework-5</a>
 					</li>
 				</ul>
 				<ul id="homeworklist-20160315">20160315-homework-js
-					<li class="homework"><a href="homework-js-1/index.html">homework-js</a></li>
+					<li class="homework"><a href="Homework-js-1/index.html">homework-js</a></li>
 				</ul>
 			</div>
 		</div>
