--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>ToddWang Homepage【汪涛】</title>
 	<link rel="stylesheet" href="style/style.css">
+	<link rel="icon" type="image/x-icon" href="images/touxiang.jpg">
 </head>
 <body>
 	<div id="page">
@@ -41,8 +42,12 @@
 						<a href="homework-5/index.html">Homework-5</a>
 					</li>
 				</ul>
-				<ul id="homeworklist-20160315">20160315-homework-js
+				<ul id="homeworklist-20160315-js">20160315-homework-js
 					<li class="homework"><a href="homework-js-1/index.html">homework-js</a></li>
+				</ul>
+				<ul id="homeorklist-20160316">20160316-homework
+					<li class="homework"><a href="Homework-20150316/20160316-backgroundroll.html">20160316-backgroundroll</a></li>
+					<li class="homework"><a href="Homework-20150316/20160316-imgroll.html">20160316-imgroll</a></li>
 				</ul>
 			</div>
 		</div>
