--- a/Homework-20160317/20160316-zoom.html
+++ b/Homework-20160317/20160316-zoom.html
@@ -35,7 +35,7 @@
 		<li><a href="images/4.jpg"><img src="images/4.jpg" alt=""></a></li>
 	</ul>
 
-	<script type="text/javascript" src="jquery-1.11.1.js"></script>
+	<script type="text/javascript" src="js/jquery-1.11.1.js"></script>
 	<script type="text/javascript">
 
 		$("img").mouseenter(function(){
