--- a/index.html
+++ b/index.html
@@ -65,7 +65,11 @@
 		</div>
 		<div id="container">
 			<div class="work">
-				<ul id="homeworklist-20160315">20160315-homework
+				<div>
+					<span>My Work In DigitaiCity</span>
+					<img src="images/DigitaiCtiy-logo.gif" alt="DigitaiCtiy">
+				</div>
+				<ul class="homeworklist homework-h5"><span>20160315-homework</span>
 					<li class="homework">
 						<a href="Homework-1/index.html">Homework-1</a>
 					</li>
@@ -82,17 +86,29 @@
 						<a href="Homework-5/index.html">Homework-5</a>
 					</li>
 				</ul>
-				<ul id="homeworklist-20160315-js">20160315-homework-js
-					<li class="homework"><a href="homework-js-1/index.html">homework-js</a></li>
+				<ul class="homeworklist homework-js"><span>20160315-homework-js</span>
+					<li class="homework">
+						<a href="homework-js-1/index.html">homework-js</a>
+					</li>
 				</ul>
-				<ul id="homeorklist-20160316">20160316-homework
-					<li class="homework"><a href="Homework-20160316/20160316-backgroundroll.html">20160316-backgroundroll</a></li>
-					<li class="homework"><a href="Homework-20150316/20160316-imgroll.html">20160316-imgroll</a></li>
+				<ul class="homeworklist homework-js"><span>20160316-homework</span>
+					<li class="homework">
+						<a href="Homework-20160316/20160316-backgroundroll.html">20160316-backgroundroll</a>
+					</li>
+					<li class="homework">
+						<a href="Homework-20150316/20160316-imgroll.html">20160316-imgroll</a>
+					</li>
 				</ul>
-				<ul id="homeworklist-20160317">20160317-homework
-					<li class="homework"></li>
-					<li class="homework"></li>
-					<li class="homework"></li>
+				<ul class="homeworklist homework-js"><span>20160317-homework</span>
+					<li class="homework">
+						<a href="Homework-20160317/20160316-tip.html">20160316-tip</a>
+					</li>
+					<li class="homework">
+						<a href="Homework-20160317/20160317-addElement.html">20160306-addElement</a>
+					</li>
+					<li class="homework">
+						<a href="Homework-20160317/20160316-zoom.html">20160306-zoom</a>
+					</li>
 				</ul>
 			</div>
 		</div>
