--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 				</ul>
 				<ul class="homeworklist homework-js"><span>20160315-homework-js</span>
 					<li class="homework">
-						<a href="homework-js-1/index.html">homework-js</a>
+						<a href="Homework-js-1/index.html">homework-js</a>
 					</li>
 				</ul>
 				<ul class="homeworklist homework-js"><span>20160316-homework</span>
@@ -96,7 +96,7 @@
 						<a href="Homework-20160316/20160316-backgroundroll.html">20160316-backgroundroll</a>
 					</li>
 					<li class="homework">
-						<a href="Homework-20150316/20160316-imgroll.html">20160316-imgroll</a>
+						<a href="Homework-20160316/20160316-imgroll.html">20160316-imgroll</a>
 					</li>
 				</ul>
 				<ul class="homeworklist homework-js"><span>20160317-homework</span>
