--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
             <div class="twelve columns">
 
-                <div class="announce announce-icon">This is my first homepage in <span class="color"><a href="http://www.teacherlin.cn/" class="color">DigitaiCity</a></span>! More details, Please visit <a href="homeworkpage.html" class="color">My Homeworkpage</a>.</div>
+                <div class="announce announce-icon">This is my first homepage in <span class="color"><a href="http://www.teacherlin.cn/" class="color">DigitaiCity</a></span>! More details, Please Click <a href="homeworkpage.html" class="color">Here</a>.</div>
             </div>
 
         </div><!-- Site Heading Title ENDS -->
